@@ -1,5 +1,4 @@
-from zope.interface import implements, Interface
-from zope.interface import implements, alsoProvides
+from zope.interface import implements, Interface, alsoProvides
 
 from plone.app.layout.globals.interfaces import IViewView
 
@@ -8,6 +7,7 @@ from Products.CMFCore.utils import getToolByName
 
 from collective.contacts import contactsMessageFactory as _
 
+from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 
 class IAddressGroupsView(Interface):
     """
@@ -29,13 +29,24 @@ class AddressGroupsView(BrowserView):
     """
     implements(IAddressGroupsView)
 
+    pt = ViewPageTemplateFile('templates/addressgroupsview.pt')
+
     def __init__(self, context, request):
         self.context = context
         self.request = request
+
+    def __call__(self):
+        """
+        This method gets called everytime the template needs to be rendered
+        """
         # This is needed so the actions bar will be shown.
         # the one with the actions, display, add item and workflow drop downs.
-        alsoProvides(self, IViewView)
+        portal_membership = getToolByName(self.context, 'portal_membership')
+        if not portal_membership.isAnonymousUser():
+            alsoProvides(self, IViewView)
 
+        return self.pt()
+    
     @property
     def portal_catalog(self):
         return getToolByName(self.context, 'portal_catalog')
