@@ -1,5 +1,4 @@
-from zope.interface import implements, Interface
-from zope.interface import implements, alsoProvides
+from zope.interface import implements, Interface, alsoProvides
 
 from plone.app.layout.globals.interfaces import IViewView
 
@@ -37,31 +36,41 @@ class AddressOrganizationsView(BrowserView):
     def __init__(self, context, request):
         self.context = context
         self.request = request
-        # This is needed so the actions bar will be shown.
-        # the one with the actions, display, add item and workflow drop downs.
-        alsoProvides(self, IViewView)
         
     def __call__(self):
-            """
-            This method gets called everytime the template needs to be rendered
-            """
+        """
+        This method gets called everytime the template needs to be rendered
+        """
+        # This is needed so the actions bar will be shown.
+        # the one with the actions, display, add item and workflow drop downs.
+        portal_membership = getToolByName(self.context, 'portal_membership')
+        if not portal_membership.isAnonymousUser():
+            alsoProvides(self, IViewView)
 
-            form = self.request.form
-            path = '/'.join(self.context.getPhysicalPath())
+        form = self.request.form
+        path = '/'.join(self.context.getPhysicalPath())
 
-            # Here we know if the user requested to export the organizations.
-            export_organizations = form.get('form.button.export_org', False)
-            # This is necessary in case this method gets called and no button was
-            # pressed. In that case it will just render the template
-            if export_organizations:
-                # If the export action was requested we provide
-                # a download dialog. The export will be done in csv format
-                return exportOrganizations(self.context,
-                                           self.request,
-                                           path,
-                                           format='csv')
+        # Here we know if the user requested to export the organizations.
+        export_organizations = form.get('form.button.export_org', False)
+        # This is necessary in case this method gets called and no button was
+        # pressed. In that case it will just render the template
+        if export_organizations:
+            # If the export action was requested we provide
+            # a download dialog. The export will be done in csv format
+            return exportOrganizations(self.context,
+                                       self.request,
+                                       path,
+                                       format='csv')
 
-            return self.pt()
+
+        # XXX: REALLY AWFUL HACK, should be removed when i know how to
+        #      have the tab selected when using an action as default view.
+#
+#        if 'addressorganizations_view' not in self.request.URL:
+#            url = self.context.absolute_url() + '/addressorganizations_view'
+#            return self.request.response.redirect(url)
+
+        return self.pt()
 
     @property
     def portal_catalog(self):
