@@ -1,4 +1,6 @@
-from zope.interface import implements, Interface
+from zope.interface import implements, Interface, alsoProvides
+
+from plone.app.layout.globals.interfaces import IViewView
 
 from Products.Five import BrowserView
 from Products.CMFCore.utils import getToolByName
@@ -34,29 +36,34 @@ class AddressPersonsView(BrowserView):
     def __init__(self, context, request):
         self.context = context
         self.request = request
-
+        
     def __call__(self):
-            """
-            This method gets called everytime the template needs to be rendered
-            """
+        """
+        This method gets called everytime the template needs to be rendered
+        """
+        # This is needed so the actions bar will be shown.
+        # the one with the actions, display, add item and workflow drop downs.
+        portal_membership = getToolByName(self.context, 'portal_membership')
+        if not portal_membership.isAnonymousUser():
+            alsoProvides(self, IViewView)
+        
+        form = self.request.form
+        path = '/'.join(self.context.getPhysicalPath())
 
-            form = self.request.form
-            path = '/'.join(self.context.getPhysicalPath())
+        # Here we know if the user requested to export the users
+        export_persons = form.get('form.button.export_persons', False)
 
-            # Here we know if the user requested to export the users
-            export_persons = form.get('form.button.export_persons', False)
+        # This is necessary in case this method gets called and no button was
+        # pressed. In that case it will just render the template
+        if export_persons:
+            # If the export action was requested we provide
+            # a download dialog. The export will be done in csv format
+            return exportPersons(self.context,
+                                 self.request,
+                                 path,
+                                 format='csv')
 
-            # This is necessary in case this method gets called and no button was
-            # pressed. In that case it will just render the template
-            if export_persons:
-                # If the export action was requested we provide
-                # a download dialog. The export will be done in csv format
-                return exportPersons(self.context,
-                                     self.request,
-                                     path,
-                                     format='csv')
-
-            return self.pt()
+        return self.pt()
 
     @property
     def portal_catalog(self):
