@@ -2,7 +2,10 @@
       lang="en"
       metal:use-macro="here/main_template/macros/master"
       i18n:domain="collective.contacts">
-
+<head>
+    <metal:block fill-slot="top_slot"
+                 tal:define="dummy python:request.set('enable_border',1)" />
+</head>
 <body>
     <div metal:fill-slot="main"
          tal:define="Batch python:modules['Products.CMFPlone'].Batch;
