@@ -2,6 +2,12 @@
       lang="en"
       metal:use-macro="here/main_template/macros/master"
       i18n:domain="collective.contacts">
+
+<head>
+    <metal:block fill-slot="top_slot"
+                 tal:define="dummy python:request.set('disable_border',1)" />
+</head>
+
 <body>
 
     <div metal:fill-slot="main">
